# clihub

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  publish.yml
src/clihub/: __init__.py  __main__.py  cli.py  output.py
src/clihub/commands/: convert.py  doctor.py  info.py  install.py  list_cmd.py  search.py  submit.py
src/clihub/converter/: detector.py  manifest.py  validator.py
src/clihub/data/: registry.json
src/clihub/installer/: base.py  brew.py  cargo.py  npm.py  pip.py  resolver.py
src/clihub/registry/: local.py  models.py  search.py
tests/: test_cli.py  test_converter.py  test_installer.py  test_models.py  test_registry.py  test_search.py  test_submit.py
