[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clihub-ai"
version = "0.1.0"
description = "The App Store for AI Agents — discover, install, and manage CLI tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Ziyang Xie", email = "ziyangxie01@gmail.com"}]
keywords = ["cli", "ai", "agent", "tools", "app-store"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://clihub.net"
Repository = "https://github.com/ZiYang-xie/clihub"
Documentation = "https://clihub.net/docs"

[project.scripts]
clihub = "clihub.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clihub = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
